--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 html, body {
-  background: url('https://images.unsplash.com/photo-1580644228275-2b826dbec5bf?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80') center center no-repeat;
+  background: url('https://images.unsplash.com/photo-1542272604-787c3835535d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1526&q=80') center center no-repeat;
   background-size: cover;
   color: white;
   height: 100%;
